test/error/s_dupmeta.lua
hstructure S
	meta : object; -- ok
	o : object;
	meta : object; -- duplicate meta
end
